--- a/index.html
+++ b/index.html
@@ -33,13 +33,10 @@
         <!-- MENU -->
         <nav class="navbar navbar-expand-lg nav-fondo navtwo">
             <div class="container-fluid navtwo_brand">
-                <a class="navbar-brand navtwo_link" href="#">
-                    <img class="nav-logo nav_logo" src="">
-                </a>
                 <button class="navbar-toggler navbar-toggler-border-color nav_collapse" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label=" Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <div class="collapse navbar-collapse navtwo_items" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0 navtwo_list">
                         <li class="nav-item navtwo_item">
                             <a class="nav-link nav-color navtwo_link" href="index.html">INICIO</a>
@@ -57,21 +54,21 @@
     </header>
     <main>
         <!-- CARRUSEL -->
-        <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="true">
+        <div id="carouselExampleIndicators" class="carousel slide carrousel" data-bs-ride="true">
             <div class="carousel-indicators">
                 <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
                 <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
                 <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
             </div>
-            <div class="carousel-inner">
+            <div class="carousel-inner carrousel_slide">
                 <div class="carousel-item active">
-                    <img src="..." class="d-block w-100" alt="...">
+                    <img src="resources/placeholder.jpg" class="d-block w-100" alt="...">
                 </div>
-                <div class="carousel-item">
-                    <img src="..." class="d-block w-100" alt="...">
+                <div class="carousel-item carrousel_slide">
+                    <img src="resources/placeholder.jpg" class="d-block w-100" alt="...">
                 </div>
-                <div class="carousel-item">
-                    <img src="..." class="d-block w-100" alt="...">
+                <div class="carousel-item carrousel_slide">
+                    <img src="resources/placeholder.jpg" class="d-block w-100" alt="...">
                 </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -84,27 +81,52 @@
             </button>
         </div>
         <!-- CATEGORIAS -->
-        <section class="card_link">
+        <section class="cardlink">
             <div class="fragances">
-                <a href="pages/fragances.html"><img class="fragances_img" src="resources/fragances" alt="fragancias"></a>
-                <span class="fragances_text">FRAGANCIAS</span>
+                <a href="pages/fragances.html"><img class="cardlink_img" src="resources/placeholderDos.jpg" alt="fragancias"></a>
             </div>
             <div class="makeUp">
-                <a href="pages/makeup.html"><img class="makeUp_img" src="resources/makeUp" alt="maquillaje"></a>
-                <span class="fragances_text">MAQUILLAJE</span>
+                <a href="pages/makeup.html"><img class="cardlink_img" src="resources/placeholderTres.jfif" alt="maquillaje"></a>
             </div>
         </section>
         <!-- RECOMENDADOS -->
-        <section class="card" id="cardIndex">
-            <div class="card_product">
-                <img class="card_img" src="resources/daisy.jpg" alt="Perfume daisy">
-                <h2 class="card_brand">Marc Jacobs</h2>
-                <p class="card_name">DAISY EDP - 80ML</p>
-                <h3 class="card_price">$25000</h3>
+        <section class="prod_card">
+            <p class="prod_rec">PRODUCTOS RECOMENDADOS:</p>
+            <div class="container text-center">
+                <div class="row">
+                    <div class="col col-3" id="recommended">
+                        <div class="card" style="width: 13rem;">
+                            <img src="resources/daisy.jpg" class="card-img-top card_img" alt="...">
+                            <div class="card-body card_product">
+                                <h5 class="card-title card_brand">Marc Jacobs</h5>
+                                <p class="card-text card_name">DAISY EDP - 80 ML</p>
+                                <p class="card-text card_price">$28000</p>
+                                <button class="btn card_btn" id="btnCart">AÑADIR AL CARRITO</button>
+                            </div>
+                        </div>
+                    </div>
             </div>
         </section>
     </main>
     <footer>
+        <section class="index">
+            <div>
+                <ul>
+                    <li><a class="" href="index.html">INICIO</a></li>
+                    <li><a class="" href="pages/fragances.html">FRAGANCIAS</a></li>
+                    <li><a class="" href="pages/makeUp.html">MAQUILLAJE</a></li>
+                    <li><a class="" href="pages/info.html">CONTACTACTANOS</a></li>
+                </ul>
+            </div>
+            <div class="social">
+                <ul>
+                    <li><a class="social_icon" href="index.html"><img src="resources/insta" alt=""></a></li>
+                    <li><a class="social_icon" href="pages/fragances.html"><img src="resources/twitter" alt=""></a></li>
+                    <li><a class="social_icon" href="pages/makeUp.html"><img src="resources/mail" alt="">florafragances@info.gmail</a></li>
+                    <li><a class="social_icon" href="pages/info.html"><img src="resources/tel" alt="">+54 11 558899</a></li>
+                </ul>
+            </div>
+        </section>
         
     </footer>
     <!-- JavaScript Bundle with Popper -->
