--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
                         <li class="nav-item navtwo_item">
                             <a class="nav-link nav-color navtwo_link" href="pages/fragances.html">FRAGANCIAS</a>
                         </li>
-                        <li class="nav-item navtwo_item">
+<!--                         <li class="nav-item navtwo_item">
                             <a class="nav-link nav-color navtwo_link" href="pages/makeUp.html">MAQUILLAJE</a>
-                        </li>
+                        </li> -->
                     </ul>
                 </div>
             </div>
@@ -95,15 +95,7 @@
             <div class="container text-center">
                 <div class="row">
                     <div class="col col-3" id="recommended">
-                        <div class="card" style="width: 13rem;">
-                            <img src="resources/daisy.jpg" class="card-img-top card_img" alt="...">
-                            <div class="card-body card_product">
-                                <h5 class="card-title card_brand">Marc Jacobs</h5>
-                                <p class="card-text card_name">DAISY EDP - 80 ML</p>
-                                <p class="card-text card_price">$28000</p>
-                                <button class="btn card_btn" id="btnCart">AÑADIR AL CARRITO</button>
-                            </div>
-                        </div>
+
                     </div>
             </div>
         </section>
